--- a/sistema/css/style.violet.css
+++ b/sistema/css/style.violet.css
@@ -13,7 +13,7 @@ Dark Admin Bootstrap Template by Bootstrapious.com
 * ==========================================================
 */
 :root {
-  --color-fondo: white;
+  --color-fondo: black;
   --color-fondo2: #2d3035;
 }
 
